# dotenv_expand

./: CMakeLists.txt  README.md  dotenv_expand.vix  vix.json
examples/: basic_expand.cpp  default_values.cpp  escape_example.cpp  nested_expand.cpp  process_env.cpp
include/dotenv_expand/: dotenv_expand.hpp
tests/: test_basic.cpp
